correction d'erreurs un peu partout dans le scss, refactor, ajout d'un gulpfile pour remplacer le gruntfile.

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,20 +2,14 @@
 // Bootstrap
 // ==========================================================================
 
-// $bootstrap: false;
-// @import 'bootstrap';
+$bootstrap: true;
+@import 'bootstrap';
 
 // ==========================================================================
 // Utilities
 // ==========================================================================
 
 @import 'app/utilities/index';
-
-// ==========================================================================
-// Base
-// ==========================================================================
-
-@import 'app/base/index';
 
 // ==========================================================================
 // Elements
@@ -34,12 +28,6 @@
 // ==========================================================================
 
 @import 'app/modules/index';
-
-// ==========================================================================
-// Templates
-// ==========================================================================
-
-@import 'app/templates/index';
 
 // ==========================================================================
 // Utilities
