--- a/assets/scss/app/utilities/_global.scss
+++ b/assets/scss/app/utilities/_global.scss
@@ -2,18 +2,33 @@
 // Breakpoints
 // ==========================================================================
 
-$breakpoints: (
-    xs: $screen-xs-min,
-    sm: $screen-sm-min,
-    md: $screen-md-min,
-    lg: $screen-lg-min,
-);
+@if $bootstrap == true {
+    $breakpoints: (
+        xs: $screen-xs-min,
+        sm: $screen-sm-min,
+        md: $screen-md-min,
+        lg: $screen-lg-min,
+    );
 
-$breakpoints-max: (
-    xs: $screen-xs-max,
-    sm: $screen-sm-max,
-    md: $screen-md-max
-);
+    $breakpoints-max: (
+        xs: $screen-xs-max,
+        sm: $screen-sm-max,
+        md: $screen-md-max
+    );
+} @else {
+    $breakpoints: (
+        xs: 480px,
+        sm: 768px,
+        md: 992px,
+        lg: 1200px,
+    );
+
+    $breakpoints-max: (
+        xs: 767px,
+        sm: 991px,
+        md: 1199px
+    );
+}
 
 // ==========================================================================
 // Colors
