--- a/assets/scss/app/elements/_index.scss
+++ b/assets/scss/app/elements/_index.scss
@@ -1,5 +1,11 @@
 // ==========================================================================
-// Boxes
+// Slider de la page Home
 // ==========================================================================
 
-@import '_boxes';
+@import 'slider-home';
+
+// ==========================================================================
+// Breadcrumb
+// ==========================================================================
+
+@import 'breadcrumb';
