--- a/assets/scss/app/layout/_index.scss
+++ b/assets/scss/app/layout/_index.scss
@@ -2,22 +2,22 @@
 // Content
 // ==========================================================================
 
-@import '_content';
+@import 'content';
 
 // ==========================================================================
 // Footer
 // ==========================================================================
 
-@import '_footer';
+@import 'footer';
 
 // ==========================================================================
 // Header
 // ==========================================================================
 
-@import '_header';
+@import 'header';
 
 // ==========================================================================
 // Navigation
 // ==========================================================================
 
-@import '_navigation';
+@import 'navigation';
