--- a/assets/scss/app/modules/_index.scss
+++ b/assets/scss/app/modules/_index.scss
@@ -2,16 +2,22 @@
 // Buttons
 // ==========================================================================
 
-@import '_buttons';
+@import 'buttons';
 
 // ==========================================================================
 // Forms
 // ==========================================================================
 
-@import '_forms';
+@import 'forms';
 
 // ==========================================================================
 // Buttons
 // ==========================================================================
 
-@import '_tables';
+@import 'tables';
+
+// ==========================================================================
+// Buttons
+// ==========================================================================
+
+@import 'tables';
