--- a/assets/scss/app/utilities/_index.scss
+++ b/assets/scss/app/utilities/_index.scss
@@ -2,7 +2,7 @@
 // Global
 // ==========================================================================
 
-@import '_global';
+@import 'global';
 
 // ==========================================================================
 // Helpers
