--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -30,7 +30,7 @@ $bootstrap: true;
 @import 'app/modules/index';
 
 // ==========================================================================
-// Utilities
+// Views
 // ==========================================================================
 
-@import 'app/utilities/index';
+@import 'app/views/index';
