folder layout > structure + default var destPaths gulpfile.js if no symfony + some fixes

--- a/assets/scss/app/elements/_breadcrumb.scss
+++ b/assets/scss/app/elements/_breadcrumb.scss
@@ -3,5 +3,8 @@
 // ==========================================================================
 
 
-.slider-home {
+.breadcrumb {
+	> li {
+		> a, > a:visited {}
+	}
 }
