--- a/assets/scss/app/utilities/_helpers.scss
+++ b/assets/scss/app/utilities/_helpers.scss
@@ -24,3 +24,14 @@ $margin-padding-count: 0;
 	$margin-padding-count: $margin-padding-count + 5;
 }
 
+// ==========================================================================
+// No grid gutters
+// ==========================================================================
+
+.row.no-gutters { 
+	@include m-h(0); 
+
+	> [class^="col-"], > [class*="col-"] { @include p-h(0); }
+}
+
+
