--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,5 @@
 // ==========================================================================
-// Bootstrap
+// Framework
 // ==========================================================================
 
 $bootstrap: true;
@@ -18,10 +18,10 @@ $bootstrap: true;
 @import 'app/elements/index';
 
 // ==========================================================================
-// Layout
+// Structure
 // ==========================================================================
 
-@import 'app/layout/index';
+@import 'app/structure/index';
 
 // ==========================================================================
 // Modules
