bootstrap folder to vendor

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,7 +3,7 @@
 // ==========================================================================
 
 $bootstrap: true;
-@import 'bootstrap';
+@import 'vendor/bootstrap/index';
 
 // ==========================================================================
 // Utilities
