correction breakpoints qui plante si bootstrap activé

--- a/assets/scss/app/utilities/_global.scss
+++ b/assets/scss/app/utilities/_global.scss
@@ -2,6 +2,8 @@
 // Breakpoints
 // ==========================================================================
 
+$breakpoints: null;
+$breakpoints-max: null;
 @if $bootstrap == true {
     $breakpoints: (
         xs: $screen-xs-min,
