Ajout mixin/herlper pour les lecteurs d'écran

--- a/assets/scss/app/utilities/_helpers.scss
+++ b/assets/scss/app/utilities/_helpers.scss
@@ -34,4 +34,12 @@ $margin-padding-count: 0;
 	> [class^="col-"], > [class*="col-"] { @include p-h(0); }
 }
 
+// ==========================================================================
+// Screen readers
+// ==========================================================================
+
+@if $bootstrap == false {
+	.sr-only { @include sr-only; }
+}
+
 
