--- a/assets/scss/app/utilities/_mixins.scss
+++ b/assets/scss/app/utilities/_mixins.scss
@@ -54,3 +54,22 @@
         @content;
     }
 }
+
+// ==========================================================================
+// Screen readers
+// ==========================================================================
+
+@mixin sr-only {
+    @if $bootstrap == false {    
+        position: absolute;
+        width: 1px; height: 1px;
+        margin: -1px; padding: 0;
+        overflow: hidden;
+        clip: rect(0,0,0,0);
+
+        border: 0;
+        background: red;
+    }
+}
+
+
