Ajout mixin/helper d'alignement de texte

--- a/assets/scss/app/utilities/_helpers.scss
+++ b/assets/scss/app/utilities/_helpers.scss
@@ -1,4 +1,14 @@
 // ==========================================================================
+// Alignment
+// ==========================================================================
+
+@if $bootstrap == false { 
+	.text-left { @include text-left; }
+	.text-center { @include text-center; }
+	.text-right { @include text-right; }
+}
+
+// ==========================================================================
 // Margin / Padding
 // ==========================================================================
 
