--- a/assets/scss/app/utilities/_mixins.scss
+++ b/assets/scss/app/utilities/_mixins.scss
@@ -1,4 +1,24 @@
 // ==========================================================================
+// Alignment
+// ==========================================================================
+
+@mixin text-left { 
+    @if $bootstrap == false {
+        text-align: left; 
+    }
+}
+@mixin text-center { 
+    @if $bootstrap == false {
+        text-align: center; 
+    }
+}
+@mixin text-right { 
+    @if $bootstrap == false {
+        text-align: right; 
+    }
+}
+
+// ==========================================================================
 // Font
 // ==========================================================================
 
