ajout script modales stand alone

--- a/assets/scss/app/utilities/_global.scss
+++ b/assets/scss/app/utilities/_global.scss
@@ -2,8 +2,8 @@
 // Breakpoints
 // ==========================================================================
 
-$breakpoints: null;
-$breakpoints-max: null;
+$breakpoints: ();
+$breakpoints-max: ();
 @if $bootstrap == true {
     $breakpoints: (
         xs: $screen-xs-min,
