Ré-organisation des fichiers

--- a/assets/scss/app/modules/_breadcrumbs.scss
+++ b/assets/scss/app/modules/_breadcrumbs.scss
@@ -1,10 +1,3 @@
 // ==========================================================================
-// Breadcrumb
+// Breadcrumbs
 // ==========================================================================
-
-
-.breadcrumb {
-	> li {
-		> a, > a:visited {}
-	}
-}
