--- a/assets/scss/app/modules/_index.scss
+++ b/assets/scss/app/modules/_index.scss
@@ -1,4 +1,10 @@
 // ==========================================================================
+// Breadcrumbs
+// ==========================================================================
+
+@import 'breadcrumbs';
+
+// ==========================================================================
 // Buttons
 // ==========================================================================
 
