Ajoute la documentation pour elements, modules, structure, utilities et views

--- a/assets/scss/app/modules/_index.scss
+++ b/assets/scss/app/modules/_index.scss
@@ -1,3 +1,16 @@
+/**
+ *
+ * MODULES
+ * Styles dédiés aux composants
+ *
+ * Regroupe les composants ré-utilisables du projet (pas de dépendance
+ * contextuelle, pas de dépendance à leur contenu).
+ *
+ * Exemple : button, form, slider, accordion...
+ *
+ */
+
+
 // ==========================================================================
 // Breadcrumbs
 // ==========================================================================
