--- a/assets/scss/app/structure/_index.scss
+++ b/assets/scss/app/structure/_index.scss
@@ -1,3 +1,13 @@
+/**
+ *
+ * STRUCTURE
+ * Styles dédiés aux ensembles structurant une page
+ *
+ * Regroupe les styles globaux de chaque élément de structure : header (`_header.scss`)
+ * contenu (`_content.scss`), et footer (`_footer.scss`).
+ *
+ */
+
 // ==========================================================================
 // Content
 // ==========================================================================
