--- a/assets/scss/app/utilities/_index.scss
+++ b/assets/scss/app/utilities/_index.scss
@@ -1,3 +1,13 @@
+/**
+ *
+ * UTILITIES
+ * Configuration du projet, fonctions et classes utiles
+ *
+ * Regroupe les variables (`_global.scss`), les fonctions côté SCSS (`_mixins.scss),
+ * et les classes utiles côté HTML (`_helpers`).
+ *
+ */
+
 // ==========================================================================
 // Global
 // ==========================================================================
