--- a/assets/scss/app/views/_index.scss
+++ b/assets/scss/app/views/_index.scss
@@ -1,3 +1,14 @@
+/**
+ *
+ * VIEWS
+ * Styles dédiés à une page / rubrique.
+ *
+ * Regroupe principalement des propriétés de positionnement(margin, padding)
+ * et de dimensions (width, height). Si des styles doivent être présents sur plusieurs
+ * pages, plutôt les placer dans `modules` ou `elements`
+ *
+ */
+
 // ==========================================================================
 // Home
 // ==========================================================================
