Inclut le module cms

--- a/assets/scss/app/modules/_index.scss
+++ b/assets/scss/app/modules/_index.scss
@@ -24,6 +24,12 @@
 @import 'buttons';
 
 // ==========================================================================
+// CMS
+// ==========================================================================
+
+@import 'cms';
+
+// ==========================================================================
 // Forms
 // ==========================================================================
 
