--- a/assets/scss/app/modules/_index.scss
+++ b/assets/scss/app/modules/_index.scss
@@ -10,7 +10,6 @@
  *
  */
 
-
 // ==========================================================================
 // Breadcrumbs
 // ==========================================================================
@@ -36,13 +35,7 @@
 @import 'forms';
 
 // ==========================================================================
-// Buttons
-// ==========================================================================
-
-@import 'tables';
-
-// ==========================================================================
-// Buttons
+// Tables
 // ==========================================================================
 
 @import 'tables';
