--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,8 +2,8 @@
 // Framework
 // ==========================================================================
 
-$bootstrap: true;
-@import 'vendor/bootstrap/index';
+$bootstrap: false;
+// @import 'vendor/bootstrap/index';
 
 // ==========================================================================
 // Utilities
