--- a/assets/scss/app/modules/_breadcrumbs.scss
+++ b/assets/scss/app/modules/_breadcrumbs.scss
@@ -1,3 +1,19 @@
 // ==========================================================================
 // Breadcrumbs
 // ==========================================================================
+
+/*doc
+---
+title: Fil d'Ariane
+name: breadcrumb
+category: Modules
+---
+
+```html_example
+<ol class="breadcrumb">
+	<li><a href="#">Accueil</a></li>
+	<li class="active">Page</li>
+</ol>
+```
+
+*/
