--- a/assets/scss/app/modules/_cms.scss
+++ b/assets/scss/app/modules/_cms.scss
@@ -11,6 +11,27 @@
  * Pour les contenus, il faut englober le contenu par la classe `.wysiwyg`.
  */
 
+/*doc
+---
+title: WYSIWYG
+name: wysiwyg
+category: Modules
+---
+
+```html_example
+<div class="wysiwyg">
+	<h1>Titre de niveau 1</h1>
+	<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipisicing elit</em>.</p>
+	<ul>
+		<li>Lorem ipsum.</li>
+		<li>Lorem ipsum.</li>
+		<li>Lorem ipsum.</li>
+	</ul>
+</div>
+```
+
+*/
+
 .wysiwyg {
 	/* @note : Tous les styles appliqués aux contenus contribués doivent être placés ici */
 }
