--- a/assets/scss/app/structure/_content.scss
+++ b/assets/scss/app/structure/_content.scss
@@ -2,20 +2,4 @@
 // Content
 // ==========================================================================
 
-.content {
-
-	/*--- Headings ---*/
-	h1, .h1,
-	h2, .h2,
-	h3, .h3,
-	h4, .h4,
-	h5, .h5,
-	h6, .h6 {}
-	h1, .h1 {}
-	h2, .h2 {}
-	h3, .h3 {}
-	h4, .h4 {}
-	h5, .h5 {}
-	h6, .h6 {}
-	p {}
-}
+.content {}
