--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,7 +3,7 @@
 // ==========================================================================
 
 $bootstrap: false;
-// @import 'vendor/bootstrap/index';
+@import 'vendor/bootstrap';
 
 // ==========================================================================
 // Utilities
