Clean les traces du Bootstrap 3 vers le Bootstrap 4

--- a/assets/scss/app/elements/_index.scss
+++ b/assets/scss/app/elements/_index.scss
@@ -7,10 +7,9 @@
  * au travers du projet (à l'inverse des modules). Il s'agit de styles fortement
  * dépendants du contexte et du contenu de l'élément.
  *
- * Exemple : home slider home, payment form, weather widget...
+ * Exemple : slider home, payment form, weather widget...
  *
  */
-
 
 // ==========================================================================
 // Slider de la page Home
