--- a/assets/scss/app/elements/_slider-home.scss
+++ b/assets/scss/app/elements/_slider-home.scss
@@ -2,5 +2,4 @@
 // Slider de la page Home
 // ==========================================================================
 
-.slider-home {
-}
+.slider-home {}
