--- a/assets/scss/app/modules/_breadcrumbs.scss
+++ b/assets/scss/app/modules/_breadcrumbs.scss
@@ -10,10 +10,12 @@ category: Modules
 ---
 
 ```html_example
-<ol class="breadcrumb">
-	<li><a href="#">Accueil</a></li>
-	<li class="active">Page</li>
-</ol>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="#">Home</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Library</li>
+  </ol>
+</nav>
 ```
 
 */
