--- a/assets/scss/app/modules/_index.scss
+++ b/assets/scss/app/modules/_index.scss
@@ -39,3 +39,9 @@
 // ==========================================================================
 
 @import 'tables';
+
+// ==========================================================================
+// Type
+// ==========================================================================
+
+@import 'type';
