--- a/assets/scss/app/modules/_tables.scss
+++ b/assets/scss/app/modules/_tables.scss
@@ -11,49 +11,35 @@ category: Base CSS
 
 ```html_example
 <table class="table">
-	<thead>
-		<tr>
-			<th>Colonne</th>
-			<th>Colonne</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>Cellule</td>
-			<td>Cellule</td>
-		</tr>
-	</tbody>
-	<tfoot>
-		<tr>
-			<td>Colonne</td>
-			<td>Colonne</td>
-		</tr>
-	</tfoot>
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
 </table>
 ```
 
 */
-
-.table {
-	tr {}
-	th {}
-	td {}
-
-	> thead {
-		> tr {
-			> th {}
-		}
-	}
-
-	> tbody {
-		> tr {
-			> td {}
-		}
-	}
-
-	> tfoot {
-		> tr {
-			> td {}
-		}
-	}
-}
