--- a/assets/scss/app/utilities/_global.scss
+++ b/assets/scss/app/utilities/_global.scss
@@ -1,97 +1,5 @@
 // ==========================================================================
-// Breakpoints
+// Custom
 // ==========================================================================
 
-/*doc
----
-title: Breakpoints
-name: breakpoints
-category: Base CSS
----
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>Breakpoint</th>
-            <th>Valeur</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>xs</td>
-            <td>480px</td>
-        </tr>
-        <tr>
-            <td>sm</td>
-            <td>768px</td>
-        </tr>
-        <tr>
-            <td>md</td>
-            <td>992px</td>
-        </tr>
-        <tr>
-            <td>lg</td>
-            <td>1200px</td>
-        </tr>
-    </tbody>
-</table>
-
-*/
-
-$breakpoints: ();
-$breakpoints-max: ();
-@if $bootstrap == true {
-    $breakpoints: (
-        xs: $screen-xs-min,
-        sm: $screen-sm-min,
-        md: $screen-md-min,
-        lg: $screen-lg-min,
-    );
-
-    $breakpoints-max: (
-        xs: $screen-xs-max,
-        sm: $screen-sm-max,
-        md: $screen-md-max
-    );
-} @else {
-    $breakpoints: (
-        xs: 480px,
-        sm: 768px,
-        md: 992px,
-        lg: 1200px,
-    );
-
-    $breakpoints-max: (
-        xs: 767px,
-        sm: 991px,
-        md: 1199px
-    );
-}
-
-// ==========================================================================
-// Colors
-// ==========================================================================
-
-$black: #000;
-$white: #fff;
-
-// ==========================================================================
-// Fonts
-// ==========================================================================
-
-/*doc
----
-title: Typographie
-name: typography
-category: Base CSS
----
-
-<h1>Titre de niveau 1</h1>
-<h2>Titre de niveau 2</h2>
-<h3>Titre de niveau 3</h3>
-<h4>Titre de niveau 4</h4>
-<h5>Titre de niveau 5</h5>
-<h6>Titre de niveau 6</h6>
-
-*/
-
+$font-size-base-px: 16; // = 1rem
