--- a/assets/scss/app/utilities/_index.scss
+++ b/assets/scss/app/utilities/_index.scss
@@ -9,10 +9,10 @@
  */
 
 // ==========================================================================
-// Global
+// Functions
 // ==========================================================================
 
-@import 'global';
+@import 'functions';
 
 // ==========================================================================
 // Mixins
