--- a/assets/scss/app/modules/_buttons.scss
+++ b/assets/scss/app/modules/_buttons.scss
@@ -10,7 +10,15 @@ category: Base CSS
 ---
 
 ```html_example
-<a href="#" class="btn btn-default">Bouton</a>
+<button type="button" class="btn btn-primary">Primary</button>
+<button type="button" class="btn btn-secondary">Secondary</button>
+<button type="button" class="btn btn-success">Success</button>
+<button type="button" class="btn btn-danger">Danger</button>
+<button type="button" class="btn btn-warning">Warning</button>
+<button type="button" class="btn btn-info">Info</button>
+<button type="button" class="btn btn-light">Light</button>
+<button type="button" class="btn btn-dark">Dark</button>
+<button type="button" class="btn btn-link">Link</button>
 ```
 
 */
