--- a/assets/scss/app/modules/_forms.scss
+++ b/assets/scss/app/modules/_forms.scss
@@ -9,90 +9,76 @@ name: forms
 category: Base CSS
 ---
 
-## Horizontal
-
 ```html_example
-<form class="form-horizontal">
-	<fieldset>
-		<legend>Legend :</legend>
-
-		<!-- Input "text" -->
-		<div class="form-group">
-			<label for="input-1" class="control-label col-sm-2">Text :</label>
-			<div class="col-sm-10">
-				<input type="text" id="input-1" class="form-control">
-			</div>
-		</div>
-
-		<!-- Input "email" -->
-		<div class="form-group">
-			<label for="input-2" class="control-label col-sm-2">Email :</label>
-			<div class="col-sm-10">
-				<input type="email" id="input-2" class="form-control">
-			</div>
-		</div>
-
-		<!-- Input "tel" -->
-		<div class="form-group">
-			<label for="input-3" class="control-label col-sm-2">Tel :</label>
-			<div class="col-sm-10">
-				<input type="tel" id="input-3" class="form-control" pattern="^((\+\d{1,3}(-| )?\(?\d\)?(-| )?\d{1,5})|(\(?\d{2,6}\)?))(-| )?(\d{3,4})(-| )?(\d{4})(( x| ext)\d{1,5}){0,1}$">
-			</div>
-		</div>
-
-		<!-- Select -->
-		<div class="form-group">
-			<label for="select-1" class="control-label col-sm-2">Select :</label>
-			<div class="col-sm-10">
-				<select id="select-1" class="form-control">
-					<option></option>
-					<option>Choix 1</option>
-					<option>Choix 2</option>
-					<option>Choix 3</option>
-				</select>
-			</div>
-		</div>
-
-		<!-- Checkbox -->
-		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
-				<div class="custom-checkbox">
-					<input type="checkbox" id="checkbox-1" name="custom-checkbox" value="option1">
-					<label for="checkbox-1">Option 1</label>
-				</div>
-			</div>
-		</div>
-
-		<!-- Radio -->
-		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
-				<div class="custom-radio">
-					<input type="radio" id="radio-1" name="custom-radio" value="option1">
-					<label for="radio-1">Option 1</label>
-				</div>
-			</div>
-		</div>
-
-		<!-- File -->
-		<div class="form-group">
-			<label for="file-1" class="control-label col-sm-2">File</label>
-			<div class="col-sm-10">
-				<input type="file" id="file-1" name="file-1">
-			</div>
-		</div>
-
-		<!-- Textarea -->
-		<div class="form-group">
-			<label for="textarea-1" class="control-label col-sm-2">Textarea :</label>
-			<div class="col-sm-10">
-				<textarea id="textarea-1" class="form-control"></textarea>
-			</div>
-		</div>
-	</fieldset>
-
-	<div class="text-center">
-		<input type="submit" class="btn btn-default" value="Valider">
+<form>
+	<!-- Text -->
+	<div class="form-group">
+		<label for="input-text">Text:</label>
+		<input type="text" id="input-text" class="form-control">
+		<small id="input-text" class="form-text text-muted">Help text</small>
 	</div>
+
+	<!-- Readonly -->
+	<div class="form-group">
+		<label for="input-readonly">Readonly:</label>
+		<input type="text" class="form-control" placeholder="Readonly input here…" readonly>
+	</div>
+
+	<!-- Email -->
+	<div class="form-group">
+		<label for="input-email">Email:</label>
+		<input type="email" id="input-email" class="form-control" placeholder="name@example.com">
+	</div>
+
+	<!-- Tel -->
+	<div class="form-group">
+		<label for="input-tel">Tel:</label>
+		<input type="tel" id="input-tel" class="form-control" pattern="^((\+\d{1,3}(-| )?\(?\d\)?(-| )?\d{1,5})|(\(?\d{2,6}\)?))(-| )?(\d{3,4})(-| )?(\d{4})(( x| ext)\d{1,5}){0,1}$">
+	</div>
+
+	<!-- Select -->
+	<div class="form-group">
+		<label for="select">Select:</label>
+		<select id="select" class="form-control">
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
+		</select>
+	</div>
+
+	<!-- Checkbox -->
+	<div class="form-group">
+		<div class="form-check">
+		  <input type="checkbox" class="form-check-input" id="input-checkbox">
+		  <label class="form-check-label" for="input-checkbox">
+		    Checkbox
+		  </label>
+		</div>
+	</div>
+
+	<!-- Radio -->
+	<div class="form-group">
+		<div class="form-check">
+		  <input type="radio" class="form-check-input" id="input-radio">
+		  <label class="form-check-label" for="input-radio">
+		    Radio
+		  </label>
+		</div>
+	</div>
+
+	<!-- File -->
+	<div class="form-group">
+		<label for="input-file">File:</label>
+		<input type="file" id="input-file" class="form-control-file">
+	</div>
+
+	<!-- Textarea -->
+	<div class="form-group">
+		<label for="textarea">Textarea:</label>
+		<textarea id="textarea" class="form-control" rows="3"></textarea>
+	</div>
+
+	<button type="submit" class="btn btn-primary">Valider</button>
 </form>
 ```
 
